// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuditsPage rendering render audits page 1`] = `
<div>
  <div
    class="page-layout"
  >
    <section
      class="pageMainSection page-title-section"
    >
      <div
        id="page-title"
      >
        <div
          class="content"
          data-ouia-component-id="OUIA-Generated-Content-1"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          <h1
            class="contentH1"
            data-ouia-component-id="breadcrumb_title"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Audits
          </h1>
        </div>
      </div>
    </section>
    <section
      class="pageMainSection page-toolbar-section"
    >
      <div
        class="toolbar page-toolbar"
        data-ouia-component-id="page-toolbar"
        data-ouia-component-type="PF6/Toolbar"
        data-ouia-safe="true"
        id="pf-random-id-0"
      >
        <div
          class="toolbarContent"
        >
          <div
            class="toolbarContentSection"
          >
            <div
              class="toolbarGroup toolbar-group-search"
            >
              <div
                class="toolbarItem toolbar-search"
              >
                <div
                  class="foreman-search-bar"
                >
                  <div
                    class="autocomplete-search"
                  >
                    <div
                      class="inputGroup"
                    >
                      <div
                        class="inputGroupItem"
                      >
                        <div
                          class="textInputGroup"
                        >
                          <div
                            class="textInputGroupMain"
                          >
                            <span
                              class="textInputGroupText"
                            >
                              <span
                                class="textInputGroupIcon"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="pf-v6-svg"
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  viewBox="0 0 512 512"
                                  width="1em"
                                >
                                  <path
                                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                                  />
                                </svg>
                              </span>
                              <input
                                aria-label="Search input"
                                class="textInputGroupTextInput"
                                placeholder="Search"
                                type="text"
                                value=""
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="inputGroupItem"
                      >
                        <button
                          aria-label="Search"
                          class="button"
                          data-ouia-component-id="OUIA-Generated-Button-control-1"
                          data-ouia-component-type="PF6/Button"
                          data-ouia-safe="true"
                          type="submit"
                        >
                          <span
                            class="buttonIcon"
                          >
                            <span
                              class="icon"
                            >
                              <span
                                class="iconContent pf-v6-m-mirror-inline-rtl"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="pf-v6-svg"
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  viewBox="0 0 448 512"
                                  width="1em"
                                >
                                  <path
                                    d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                  <button
                    aria-expanded="false"
                    aria-label="bookmarks dropdown toggle"
                    class="menuToggle"
                    data-ouia-component-id="bookmarks-dropdown-toggle"
                    data-ouia-component-type="PF6/MenuToggle"
                    data-ouia-safe="true"
                    title="Bookmarks"
                    type="button"
                  >
                    <span
                      class="menuToggleText"
                    >
                      <span
                        class="icon"
                      >
                        <span
                          class="iconContent"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v6-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 384 512"
                            width="1em"
                          >
                            <path
                              d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="toolbarGroup"
            >
              <a
                class="button btn-docs"
                data-ouia-component-id="audits-documentation-button"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                href="/links/manual/4.1.4Auditing"
                rel="external noreferrer noopener"
                target="_blank"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                   Documentation
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          class="toolbarContent"
          hidden=""
        >
          <div
            class="toolbarGroup"
          />
        </div>
      </div>
    </section>
    <section
      class="pageMainSection page-content-section"
    >
      <div
        id="audit-list"
      >
        <ul
          aria-label="Audits data list"
          class="dataList"
          id="audit-list"
          role="list"
        >
          <li
            class="dataListItem audits-data-list main-info-minimize-padding"
            id="234"
          >
            <div
              class="dataListItemRow audits-list-item-row"
            >
              <div
                class="dataListItemControl"
              >
                <div
                  class="dataListToggle"
                >
                  <button
                    aria-controls="false"
                    aria-expanded="false"
                    aria-label="Details"
                    aria-labelledby=" undefined"
                    class="button"
                    data-ouia-component-id="OUIA-Generated-Button-plain-1"
                    data-ouia-component-type="PF6/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <span
                      class="buttonIcon"
                    >
                      <div
                        class="dataListToggleIcon"
                      >
                        <svg
                          aria-hidden="true"
                          class="pf-v6-svg"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          />
                        </svg>
                      </div>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="dataListItemContent"
              >
                <div
                  class="dataListCell"
                >
                  <span
                    class="pf-v6-u-font-weight-bold pf-v6-u-font-size-sm"
                  >
                    <div
                      style="display: contents;"
                    >
                      <a
                        class="user-info"
                        href="/audits?search=user+%3D+admin"
                      >
                        Admin 
                      </a>
                    </div>
                    <div
                      class="gray-text"
                    >
                      (
                      127.0.0.1
                      )
                    </div>
                  </span>
                </div>
                <div
                  class="dataListCell"
                >
                  updated
                </div>
                <div
                  class="dataListCell additional-info-item item-name"
                >
                  <span>
                    HOST
                  </span>
                </div>
                <div
                  class="dataListCell additional-info-item item-resource"
                >
                  <span>
                    <div
                      style="display: contents;"
                    >
                      <a
                        href="/audits?search=type+%3D+host+and+auditable_id+%3D+9"
                        id="resource-link-234"
                      >
                        host-foo.example.com
                      </a>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="dataListItemAction audits-list-actions"
                rowid=""
              >
                <span
                  class="gray-text"
                >
                  <span
                    title="8 years ago"
                  >
                    <span>
                      Aug 13, 01:34 PM
                    </span>
                  </span>
                </span>
              </div>
            </div>
            <section
              class="dataListExpandableContent data-list-content"
              hidden=""
              id=""
            >
              <div
                class="dataListExpandableContentBody"
              >
                <div
                  class="grid"
                >
                  <div
                    class="gridItem actions-btns"
                  >
                    <a
                      class="button pf-v6-u-float-right"
                      data-ouia-component-id="action-links-btn"
                      data-ouia-component-type="PF6/Button"
                      data-ouia-safe="true"
                      href="/hosts/host-foo.example.com"
                    >
                      <span
                        class="pf-v6-c-button__text"
                      >
                        Host details
                      </span>
                    </a>
                  </div>
                  <div
                    class="gridItem taxonomy-section"
                  >
                    <div
                      class="grid"
                    >
                      <div
                        class="gridItem"
                      >
                        <span>
                          Affected Organizations
                        </span>
                      </div>
                      <div
                        class="gridItem"
                      >
                        <strong>
                          <a
                            class="button apply-comma "
                            data-ouia-component-id="taxonomy-inline-btn"
                            data-ouia-component-type="PF6/Button"
                            data-ouia-safe="true"
                            href="/organizations/1-test_org1/edit"
                          >
                            <span
                              class="pf-v6-c-button__text"
                            >
                              test_org1
                            </span>
                          </a>
                          <a
                            class="button apply-comma "
                            data-ouia-component-id="taxonomy-inline-btn"
                            data-ouia-component-type="PF6/Button"
                            data-ouia-safe="true"
                            href="/organizations/3-test_org2/edit"
                          >
                            <span
                              class="pf-v6-c-button__text"
                            >
                              test_org2
                            </span>
                          </a>
                          <a
                            class="button apply-comma "
                            data-ouia-component-id="taxonomy-inline-btn"
                            data-ouia-component-type="PF6/Button"
                            data-ouia-safe="true"
                            href="/organizations/5-test_org3/edit"
                          >
                            <span
                              class="pf-v6-c-button__text"
                            >
                              test_org3
                            </span>
                          </a>
                        </strong>
                      </div>
                    </div>
                    <div
                      class="grid"
                    >
                      <div
                        class="gridItem"
                      >
                        <span>
                          Affected Locations
                        </span>
                      </div>
                      <div
                        class="gridItem"
                      >
                        <strong>
                          <a
                            class="button apply-comma "
                            data-ouia-component-id="taxonomy-inline-btn"
                            data-ouia-component-type="PF6/Button"
                            data-ouia-safe="true"
                            href="/locations/2-test_loc1/edit"
                          >
                            <span
                              class="pf-v6-c-button__text"
                            >
                              test_loc1
                            </span>
                          </a>
                          <a
                            class="button apply-comma "
                            data-ouia-component-id="taxonomy-inline-btn"
                            data-ouia-component-type="PF6/Button"
                            data-ouia-safe="true"
                            href="/locations/6-test_loc2/edit"
                          >
                            <span
                              class="pf-v6-c-button__text"
                            >
                              test_loc2
                            </span>
                          </a>
                          <a
                            class="button apply-comma "
                            data-ouia-component-id="taxonomy-inline-btn"
                            data-ouia-component-type="PF6/Button"
                            data-ouia-safe="true"
                            href="/locations/9-test_loc3/edit"
                          >
                            <span
                              class="pf-v6-c-button__text"
                            >
                              test_loc3
                            </span>
                          </a>
                        </strong>
                      </div>
                    </div>
                  </div>
                  <div
                    class="gridItem"
                  >
                    <span>
                      Request UUID
                    </span>
                  </div>
                  <div
                    class="gridItem value"
                  >
                    <div
                      style="display: contents;"
                    >
                      <button
                        class="button"
                        data-ouia-component-id="request-uuid-btn"
                        data-ouia-component-type="PF6/Button"
                        data-ouia-safe="true"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-button__text"
                        >
                          c134239d-8ac3-494b-9962-35133fe153ba
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="grid-container"
                  >
                    <table
                      class="table-changes table table-bordered table-hover"
                    >
                      <tbody>
                        <tr>
                          <td
                            class="col-6 col-md-4"
                          >
                            <div>
                              Root pass
                            </div>
                          </td>
                          <td
                            class="col-6 col-md-4 show-old"
                          >
                            <div
                              class="show-old"
                            >
                              <p>
                                [redacted]
                              </p>
                            </div>
                          </td>
                          <td
                            class="col-6 col-md-4 show-new"
                          >
                            <div
                              class="show-new"
                            >
                              <p>
                                [redacted]
                              </p>
                            </div>
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="col-6 col-md-4"
                          >
                            <div>
                              Comment
                            </div>
                          </td>
                          <td
                            class="col-6 col-md-4 show-old"
                          >
                            <div
                              class="show-old"
                            >
                              <p>
                                [empty]
                              </p>
                            </div>
                          </td>
                          <td
                            class="col-6 col-md-4 show-new"
                          >
                            <div
                              class="show-new"
                            >
                              <p>
                                This is info about host for audit
                              </p>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </section>
          </li>
        </ul>
      </div>
      <div
        class="pagination tfm-pagination no-side-padding"
        data-ouia-component-id="OUIA-Generated-Pagination-bottom-1"
        data-ouia-component-type="PF6/Pagination"
        data-ouia-safe="true"
        data-per-page="20"
        data-total="1"
        id="options-menu-bottom-pagination"
        style="--pf-v6-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
      >
        <div
          class="paginationPageMenu"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Items per page"
            class="menuToggle pf-m-text"
            data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-1"
            data-ouia-component-type="PF6/MenuToggle"
            data-ouia-safe="true"
            id="options-menu-bottom-toggle"
            type="button"
          >
            <span
              class="menuToggleText"
            >
              <b>
                1
                 - 
                1
              </b>
               
              of
               
              <b>
                1
              </b>
               
              items
            </span>
            <span
              class="menuToggleControls"
            >
              <span
                class="menuToggleToggleIcon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
        <nav
          aria-label="Pagination"
          class="paginationNav"
        >
          <div
            class="paginationNavControl"
          >
            <button
              aria-label="Go to first page"
              class="button"
              data-action="first"
              data-ouia-component-id="OUIA-Generated-Button-plain-2"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              <span
                class="buttonIcon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 448 512"
                  width="1em"
                >
                  <path
                    d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="paginationNavControl"
          >
            <button
              aria-label="Go to previous page"
              class="button"
              data-action="previous"
              data-ouia-component-id="OUIA-Generated-Button-plain-3"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              <span
                class="buttonIcon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="paginationNavPageSelect"
          >
            <span
              class="formControl"
            >
              <input
                aria-invalid="false"
                aria-label="Current page"
                data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                data-ouia-component-type="PF6/TextInput"
                data-ouia-safe="true"
                disabled=""
                max="1"
                min="1"
                type="number"
                value="1"
              />
            </span>
            <span
              aria-hidden="true"
            >
              of
               
              1
            </span>
          </div>
          <div
            class="paginationNavControl"
          >
            <button
              aria-label="Go to next page"
              class="button"
              data-action="next"
              data-ouia-component-id="OUIA-Generated-Button-plain-4"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              <span
                class="buttonIcon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="paginationNavControl"
          >
            <button
              aria-label="Go to last page"
              class="button"
              data-action="last"
              data-ouia-component-id="OUIA-Generated-Button-plain-5"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              <span
                class="buttonIcon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 448 512"
                  width="1em"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </nav>
      </div>
    </section>
  </div>
</div>
`;

exports[`AuditsPage rendering render audits page with error 1`] = `
<div>
  <div
    class="page-layout"
  >
    <section
      class="pageMainSection page-title-section"
    >
      <div
        id="page-title"
      >
        <div
          class="content"
          data-ouia-component-id="OUIA-Generated-Content-3"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          <h1
            class="contentH1"
            data-ouia-component-id="breadcrumb_title"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Audits
          </h1>
        </div>
      </div>
    </section>
    <section
      class="pageMainSection page-toolbar-section"
    >
      <div
        class="toolbar page-toolbar"
        data-ouia-component-id="page-toolbar"
        data-ouia-component-type="PF6/Toolbar"
        data-ouia-safe="true"
        id="pf-random-id-1"
      >
        <div
          class="toolbarContent"
        >
          <div
            class="toolbarContentSection"
          >
            <div
              class="toolbarGroup toolbar-group-search"
            >
              <div
                class="toolbarItem toolbar-search"
              >
                <div
                  class="foreman-search-bar"
                >
                  <div
                    class="autocomplete-search"
                  >
                    <div
                      class="inputGroup"
                    >
                      <div
                        class="inputGroupItem"
                      >
                        <div
                          class="textInputGroup"
                        >
                          <div
                            class="textInputGroupMain"
                          >
                            <span
                              class="textInputGroupText"
                            >
                              <span
                                class="textInputGroupIcon"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="pf-v6-svg"
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  viewBox="0 0 512 512"
                                  width="1em"
                                >
                                  <path
                                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                                  />
                                </svg>
                              </span>
                              <input
                                aria-label="Search input"
                                class="textInputGroupTextInput"
                                placeholder="Search"
                                type="text"
                                value=""
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="inputGroupItem"
                      >
                        <button
                          aria-label="Search"
                          class="button"
                          data-ouia-component-id="OUIA-Generated-Button-control-2"
                          data-ouia-component-type="PF6/Button"
                          data-ouia-safe="true"
                          type="submit"
                        >
                          <span
                            class="buttonIcon"
                          >
                            <span
                              class="icon"
                            >
                              <span
                                class="iconContent pf-v6-m-mirror-inline-rtl"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="pf-v6-svg"
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  viewBox="0 0 448 512"
                                  width="1em"
                                >
                                  <path
                                    d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                  <button
                    aria-expanded="false"
                    aria-label="bookmarks dropdown toggle"
                    class="menuToggle"
                    data-ouia-component-id="bookmarks-dropdown-toggle"
                    data-ouia-component-type="PF6/MenuToggle"
                    data-ouia-safe="true"
                    title="Bookmarks"
                    type="button"
                  >
                    <span
                      class="menuToggleText"
                    >
                      <span
                        class="icon"
                      >
                        <span
                          class="iconContent"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v6-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 384 512"
                            width="1em"
                          >
                            <path
                              d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="toolbarGroup"
            >
              <a
                class="button btn-docs"
                data-ouia-component-id="audits-documentation-button"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                href="/links/manual/4.1.4Auditing"
                rel="external noreferrer noopener"
                target="_blank"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                   Documentation
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          class="toolbarContent"
          hidden=""
        >
          <div
            class="toolbarGroup"
          />
        </div>
      </div>
    </section>
    <section
      class="pageMainSection page-content-section"
    >
      <div
        class="emptyState"
      >
        <div
          class="emptyStateContent"
        >
          <div
            class="emptyState__header"
          >
            <div
              class="emptyState__title"
            >
              <h5
                class="emptyStateTitleText"
              >
                Error
              </h5>
            </div>
          </div>
          <span
            class="empty-state-icon"
          >
            <span
              class="icon"
            >
              <span
                class="iconContent"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  />
                </svg>
              </span>
            </span>
          </span>
          <div
            class="emptyStateBody"
          >
            <div
              class="empty-state-description"
            >
              some-error
            </div>
          </div>
          <div
            class="emptyStateFooter"
          >
            <div
              class="emptyStateActions"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;
